<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:orientation="vertical"            
    tools:context=".LeerActivity" >
    <ScrollView
        android:id="@+id/sv_nota"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"               
         >

        <LinearLayout
            android:id="@+id/ly_svNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp" >
            
		     <TextView
		        android:id="@+id/tv_tituloInternaNota"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/nota_titulo"
		        android:textAppearance="@dimen/texto_normal_titulo"
		         />

		     <TextView
		         android:id="@+id/tv_seccionInternaNota"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:text="@string/nota_seccion"
		         android:textAppearance="@dimen/texto_normal_seccion" 
		         />
			
		    <ImageView
		        android:id="@+id/iv_imagenInternaNota"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/abc_ab_stacked_transparent_dark_holo"
		        android:contentDescription="@string/nota_imagen" />
		
		    <TextView
		        android:id="@+id/tv_descripcionInternaNota"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/nota_descripcion"		        
		        android:textAlignment="textStart"
		        android:textAppearance="@dimen/texto_normal_descripcion"
		        />

		        </LinearLayout>
        
    </ScrollView>
    
</LinearLayout>
